# discord-bot

./: .env.template  Cargo.toml  LICENSE  README.md  compose.yaml  dockerfile  fortune.json
.cargo/: config.toml
src/: ai.rs  commands.rs  database.rs  events.rs  main.rs  tools.rs
