[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Experimental Cyborg <experimentalcyborg@protonmail.ch>"]
description = "A Discord bot that talks."
license = "MIT"

documentation = "https://docs.rs/*" # todo
repository = "https://github.com/ExperimentalCyborg/*" # todo
homepage = "https://github.com/ExperimentalCyborg/*" # todo
keywords = [] # todo
categories = [] # todo
exclude = [".github/*"]

[dependencies]
poise = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11"
log = "0.4.22"

[profile.release]
strip = true  # Remove debug symbols, we're not attaching debuggers to release binaries, and it saves a couple mb
lto = "thin"  # Optimize across external dependencies too
codegen-units = 1  # Single threaded compilation to enable optimizations that aren't available in multithreaded compile
panic = "unwind"  # Force enable panic handling per thread instead of killing the whole app so a bugged command doesn't bring the whole bot down
incremental = true  # Don't do a full recompile of stuff that didn't change since last compilation
